Applied patch for missing baud rates on kppp:

BUG:30572


svn path=/trunk/KDE/kdenetwork/kppp/; revision=901916